--- a/package.json
+++ b/package.json
@@ -56,8 +56,12 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-google-invisible-recaptcha": "^0.2.11",
+    "react-redux": "^6.0.0",
     "react-responsive-picture": "^3.1.0",
     "react-share": "^2.4.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "winston": "^2.4.2"
   }
